--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1659,26 +1659,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'extend'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[45], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m     fact\u001b[38;5;241m.\u001b[39mappend(k)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m==\u001b[39m k:\n\u001b[1;32m---> 14\u001b[0m     ml \u001b[38;5;241m=\u001b[39m ml\u001b[38;5;241m.\u001b[39mextend([j, \u001b[38;5;28mlist\u001b[39m(fact)])\n\u001b[0;32m     15\u001b[0m     main_list\u001b[38;5;241m.\u001b[39mappend(ml)\n\u001b[0;32m     16\u001b[0m     fact \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'extend'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, [1]], [2, [1, 2]], [3, [1, 3]], [4, [1, 2, 4]], [5, [1, 5]]]\n"
      ]
     }
    ],
    "source": [
-    "#40 error\n",
+    "#40\n",
     "number = []\n",
     "fact = []\n",
-    "main_list = []\n",
     "ml = []\n",
     "for i in range(5):\n",
     "    nb = int(input('Enter a number: '))\n",
@@ -1688,12 +1683,9 @@
     "        if j % k == 0:\n",
     "            fact.append(k)\n",
     "        if j == k:\n",
-    "            ml = ml.extend([j, list(fact)])\n",
-    "            main_list.append(ml)\n",
+    "            ml.append([j, fact])\n",
     "            fact = []\n",
-    "\n",
-    "\n",
-    "print(main_list)"
+    "print(ml)"
    ]
   },
   {
@@ -1704,7 +1696,7 @@
    "source": [
     "#41\n",
     "def reverse_list(nums):\n",
-    "    rev = nums[::-13]\n",
+    "    rev = nums[::-1]\n",
     "    return rev"
    ]
   },
@@ -1735,10 +1727,276 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m d\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m----> 8\u001b[0m     count \u001b[38;5;241m=\u001b[39m count\u001b[38;5;241m.\u001b[39mupdate(i)\n\u001b[0;32m      9\u001b[0m     i \u001b[38;5;241m=\u001b[39m i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(count)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "#1 error\n",
+    "d = {\n",
+    "    str : \"Hello\"\n",
+    "    }\n",
+    "count = {}\n",
+    "i = 1\n",
+    "for k,v in d.items():\n",
+    "    count = count.update(i)\n",
+    "    i = i + 1\n",
+    "print(count)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "dict1 = {\"a\": 1, \"b\": 2}\n",
+    "dict2 = {\"c\": 3, \"d\": 4}\n",
+    "dict1.update(dict2)\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#3\n",
+    "data = {\"a\": 10, \"b\": 5, \"c\": 10}\n",
+    "max(data.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#4\n",
+    "num = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "'d' in num.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'c': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "num = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "num.pop('b')\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#6 error\n",
+    "dict1 = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "dict2 = {\"b\": 3, \"c\": 4, \"d\": 5}\n",
+    "for k,v in dict1.items():\n",
+    "    if k == dict2.keys():\n",
+    "        print(k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#7\n",
+    "n = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "len(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('a', 1), ('b', 2), ('c', 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8\n",
+    "dic = {\"b\": 2, \"a\": 1, \"c\": 3}\n",
+    "print(sorted(dic.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#9\n",
+    "val = {\"a\": 10, \"b\": 5, \"c\": 15}\n",
+    "min(val.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#10\n",
+    "n = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "list(n.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#11\n",
+    "n = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "num = 2\n",
+    "num in n.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "update expected at most 1 argument, got 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mdict\u001b[39m \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m keys:\n\u001b[1;32m----> 5\u001b[0m     \u001b[38;5;28mdict\u001b[39m\u001b[38;5;241m.\u001b[39mupdate(k, k\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mdict\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: update expected at most 1 argument, got 2"
+     ]
+    }
+   ],
+   "source": [
+    "#12 error\n",
+    "keys = [1,2,3,4,5,6,7,8,9,10]\n",
+    "dict = {}\n",
+    "for k in keys:\n",
+    "    dict.update(k, k**2)\n",
+    "print(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#13\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1907,24 +2165,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "ones() got multiple values for argument 'shape'",
+     "evalue": "only integer scalar arrays can be converted to a scalar index",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#8\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m],([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]),shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m))\n",
-      "\u001b[1;31mTypeError\u001b[0m: ones() got multiple values for argument 'shape'"
+      "Cell \u001b[1;32mIn[9], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones((\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m4\u001b[39m))\n\u001b[0;32m      3\u001b[0m a \u001b[38;5;241m=\u001b[39m arr[\u001b[38;5;241m1\u001b[39m:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m----> 4\u001b[0m np\u001b[38;5;241m.\u001b[39mzeros(a)\n",
+      "\u001b[1;31mTypeError\u001b[0m: only integer scalar arrays can be converted to a scalar index"
      ]
     }
    ],
    "source": [
     "#8 error\n",
-    "arr = np.ones([1,-1],([1,-1]),shape=(3,3))"
+    "arr = np.ones((4,4))\n",
+    "a = arr[1:-1,1:-1]\n",
+    "\n"
    ]
   },
   {
@@ -1977,23 +2237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[63 80 68 45 95]\n",
-      " [72  7 56 74 60]\n",
-      " [ 8 57 69 19 24]\n",
-      " [94 34 51 97  5]\n",
-      " [33 15 66 46 86]]\n",
-      "[[63 68 95]\n",
-      " [72 56 60]\n",
-      " [ 8 69 24]\n",
-      " [94 51  5]\n",
-      " [33 66 86]]\n"
+      "[[43 76 80 81 39]\n",
+      " [24 53 95 52 43]\n",
+      " [68 45 54 15 54]\n",
+      " [11 15 48 26 86]\n",
+      " [ 1 44 59 51 91]]\n",
+      "[[43 80 39]\n",
+      " [24 95 43]\n",
+      " [68 54 54]\n",
+      " [11 48 86]\n",
+      " [ 1 59 91]]\n"
      ]
     }
    ],
@@ -2006,15 +2266,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[72  7 56 74 60]\n",
-      " [94 34 51 97  5]]\n"
+      "[[24 53 95 52 43]\n",
+      " [11 15 48 26 86]]\n"
      ]
     }
    ],
@@ -2025,16 +2285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[80 68 45 95]\n",
-      " [ 7 56 74 60]\n",
-      " [57 69 19 24]]\n"
+      "[[76 80 81 39]\n",
+      " [53 95 52 43]\n",
+      " [45 54 15 54]]\n"
      ]
     }
    ],
@@ -2045,24 +2305,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[86 46 66 15 33]\n",
-      " [ 5 97 51 34 94]\n",
-      " [24 19 69 57  8]\n",
-      " [60 74 56  7 72]\n",
-      " [95 45 68 80 63]]\n"
+      "[[ 1 44 59 51 91]\n",
+      " [11 15 48 26 86]\n",
+      " [68 45 54 15 54]\n",
+      " [24 53 95 52 43]\n",
+      " [43 76 80 81 39]]\n"
      ]
     }
    ],
    "source": [
-    "#14 error\n",
-    "print(np.flip(mtrx[0:][:,0:]))"
+    "#14\n",
+    "print(mtrx[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for ** or pow(): 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#15 error\u001b[39;00m\n\u001b[0;32m      2\u001b[0m a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m np\u001b[38;5;241m.\u001b[39mdiagonal(a,axis1\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, axis2\u001b[38;5;241m=\u001b[39ma \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for ** or pow(): 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "#15 error\n",
+    "a = [1,2,3,4,5]\n",
+    "np.diagonal(a,axis1=0, axis2=a ** 2)"
    ]
   },
   {
@@ -2070,9 +2353,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#15 error\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
